2014-01-22  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (ECLASSES, ECLASSFILES): Avoid deprecated
	"portageq portdir" call.

2013-10-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): Add new keywords
	@BUGREPORTS and @VCSURL from eclass-to-manpage.awk.

2013-09-18  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Remove special
	treatment for EAPI=0.

2013-09-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.24 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* gentoo-newsitem-mode.el (gentoo-newsitem-font-lock-keywords):
	Add missing pair of parentheses.

2013-09-08  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.23 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
	from eclasses.

	* keyword-generation.sh (OBSOLETE): Cleanup list.
	(ECLASSES): Strip filename suffix and sort the list of eclasses.

2013-07-07  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el: Add no-update-autoloads to file
	variables.

	* ebuild-mode.el (ebuild-mode-arch-list): Add amd64-fbsd to
	fallback list.

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Work around
	problem with nested interactors in XEmacs. Suppress IUSE if its
	value is empty; the variable is no longer mandatory.

2013-07-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.22 released.

2013-07-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (interpreter-mode-alist): Don't add runscript.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
	from eclasses.

	* keyword-generation.sh (OBSOLETE): Clean up list of obsolete
	eclasses.

	* Rename package to ebuild-mode.
	* ebuild-mode.el: File renamed from gentoo-syntax.el.
	(gentoo-syntax): Don't provide feature.
	* ebuild-mode.texi: File renamed from gentoo-syntax.texi.
	* Makefile (PN): Rename to ebuild-mode.
	(PV, DISTFILES): Update.
	(ebuild-mode.info): Rename.
